[package]
name = "wry-video-test"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.6"
image = "0.24.4"
imageproc = "0.23.0"
rusttype = "0.9.2"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_cbor = "0.11.2"
wry = { git = "https://github.com/tauri-apps/wry.git" }

# [profile.dev.package."*"]
# opt-level = 3
# overflow-checks = false
# debug-assertions = false
